examples/c/error-codes/undefined/UB-CTI1-bad-static.output
UB-CTI1-bad-static.c:3:7: error: size of array has non-integer type 'double'
int a[5.5];
      ^~~
1 error generated.
